--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             	<article id="projects">
             		<h2>NOS PROJETS</h2>
             		<div class="circle"></div>
-            		<p class="development">Voici une selection de projets que nous avons déja pu réaliser auprès de nos clients. Libre à vous d'aller les explorer...et peut êre de réaliser le votre !</p>
+            		<p class="development">Voici une selection de projets que nous avons déja pu réaliser auprès de nos clients. Libre à vous d'aller les explorer...et de surement réaliser le votre !</p>
 
             		<nav id="portfolio_nav">
             			<ul id="portfolio_list">
