--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <section>            	
             	<article id="services">
             		<h2>NOS SERVICES</h2>
-            		<div class="circle"></div>
+            		<div class="circle_liseret"></div>
+			<div class="circle"></div>
             		<p class="development">Ici bas, retrouvez notre gamme de services complète pour réaliser à votre image le projet qui vous tient à coeur</p>
                     <div id="services_elements">
             			<p>
@@ -99,7 +100,8 @@
             <section>
             	<article id="projects">
             		<h2>NOS PROJETS</h2>
-            		<div class="circle"></div>
+            		<div class="circle_liseret"></div>
+			<div class="circle"></div>
             		<p class="development">Voici une selection de projets que nous avons déja pu réaliser auprès de nos clients. Libre à vous d'aller les explorer... et de surement réaliser le votre !</p>
 
             		<nav id="portfolio_nav">
